A generall content viewer is added (based on embed tag).

--- a/app/index.html
+++ b/app/index.html
@@ -28,6 +28,9 @@
 	
     <!-- build:css(.tmp) styles/main.css -->
 	<!-- injector:css -->
+	<link rel="stylesheet" href="scripts/module-bank/editors/bank-gate.css">
+	<link rel="stylesheet" href="scripts/module-cms/editors/content-properties.css">
+	<link rel="stylesheet" href="scripts/module-seo/views/links-new.css">
 	<link rel="stylesheet" href="styles/crisp-hack-button.css">
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="styles/module-account.css">
@@ -120,8 +123,10 @@
 	<script src="scripts/module-bank/editors/bank-gate.js"></script>
 	<script src="scripts/module-bank/views/gates-new.js"></script>
 	<script src="scripts/module-bank/views/gates.js"></script>
+	<script src="scripts/module-cms/actions/contents-delete.js"></script>
 	<script src="scripts/module-cms/actions/contents-edit.js"></script>
 	<script src="scripts/module-cms/actions/contents-properties.js"></script>
+	<script src="scripts/module-cms/actions/contents-update.js"></script>
 	<script src="scripts/module-cms/controllers/content-new-ctrl.js"></script>
 	<script src="scripts/module-cms/controllers/content-url-ctrl.js"></script>
 	<script src="scripts/module-cms/controllers/seen-cms-contents-ctrl.js"></script>
@@ -129,7 +134,8 @@
 	<script src="scripts/module-cms/dialogs/term-taxonomy-new-dialog-ctrl.js"></script>
 	<script src="scripts/module-cms/directives/content-icon-directive.js"></script>
 	<script src="scripts/module-cms/directives/content-preview-directive.js"></script>
-	<script src="scripts/module-cms/editors/content-editor-ctrl.js"></script>
+	<script src="scripts/module-cms/editors/content-properties.js"></script>
+	<script src="scripts/module-cms/editors/content-viewer.js"></script>
 	<script src="scripts/module-cms/editors/term-editor-ctrl.js"></script>
 	<script src="scripts/module-cms/editors/term-taxonomy-editor-ctrl.js"></script>
 	<script src="scripts/module-cms/resources/content-upload.js"></script>
