The VW-PDF is embedded as pdf viewer.

--- a/app/index.html
+++ b/app/index.html
@@ -135,6 +135,7 @@
 	<script src="scripts/module-cms/directives/content-icon-directive.js"></script>
 	<script src="scripts/module-cms/directives/content-preview-directive.js"></script>
 	<script src="scripts/module-cms/editors/content-document-editor.js"></script>
+	<script src="scripts/module-cms/editors/content-pdf-viewer.js"></script>
 	<script src="scripts/module-cms/editors/content-properties.js"></script>
 	<script src="scripts/module-cms/editors/content-viewer.js"></script>
 	<script src="scripts/module-cms/editors/term-editor-ctrl.js"></script>
