Adding zone id resource

--- a/app/index.html
+++ b/app/index.html
@@ -212,6 +212,7 @@
 	<script src="scripts/module-shop/actions/zone-update.js"></script>
 	<script src="scripts/module-shop/controllers/amd-shop-categories.js"></script>
 	<script src="scripts/module-shop/controllers/amd-shop-order.js"></script>
+	<script src="scripts/module-shop/controllers/zones.js"></script>
 	<script src="scripts/module-shop/editors/amd-shop-agency.js"></script>
 	<script src="scripts/module-shop/editors/amd-shop-category.js"></script>
 	<script src="scripts/module-shop/editors/amd-shop-deliver.js"></script>
