--- a/app/scripts/module-shop/resources/zones.html
+++ b/app/scripts/module-shop/resources/zones.html
@@ -1,5 +1,4 @@
 <div 
-	ng-controller="MbSeenShopZonesCtrl as ctrl"
 	mb-preloading="ctrl.state === 'busy'"
 	layout="column"
 	flex>
@@ -17,21 +16,21 @@
 		<md-list flex>
 			<md-list-item 
 				ng-repeat="item in ctrl.items track by item.id"
-				ng-click="multi || resourceCtrl.setSelected(item)"
+				ng-click="multi || ctrl.setSelected(item, $event)"
 				class="md-3-line">
 				<mb-icon>accessibility</mb-icon>
 				<div 
 					class="md-list-item-text" 
 					layout="column">
-					<h3>{{::item.name}}</h3>
+					<h3>{{::item.title}}</h3>
 					<p>{{::item.description}}</p>
 				</div>
 				<md-checkbox 
 					ng-if="multi"
 					class="md-secondary"
-					ng-init="item.selected = resourceCtrl.isSelected(item)" 
+					ng-init="item.selected = ctrl.isSelected(item)" 
 					ng-model="item.selected"
-					ng-click="resourceCtrl.setSelected(item, item.selected)">
+					ng-click="ctrl.setSelected(item, item.selected)">
 				</md-checkbox>
 				<md-divider md-inset></md-divider>
 			</md-list-item>
