bug fixed: add view to show which item is selected.

--- a/app/scripts/module-shop/resources/categories.html
+++ b/app/scripts/module-shop/resources/categories.html
@@ -25,7 +25,8 @@
 					<h3>{{::role.name}}</h3>
 					<p>{{::role.description}}</p>
 				</div>
-				<md-checkbox class="md-secondary"
+				<md-checkbox
+					class="md-secondary"
 					ng-init="role.selected = ctrl.isSelected(role)" 
 					ng-model="role.selected"
 					ng-click="ctrl.setSelected(role, role.selected)">
