--- a/app/index.html
+++ b/app/index.html
@@ -31,6 +31,7 @@
 	<link rel="stylesheet" href="scripts/module-bank/editors/bank-gate.css">
 	<link rel="stylesheet" href="scripts/module-cms/editors/content-properties.css">
 	<link rel="stylesheet" href="scripts/module-seo/views/links-new.css">
+	<link rel="stylesheet" href="styles/amd-chips-hack.css">
 	<link rel="stylesheet" href="styles/crisp-hack-button.css">
 	<link rel="stylesheet" href="styles/main.css">
 	<link rel="stylesheet" href="styles/module-account.css">
@@ -118,6 +119,7 @@
 	<script src="scripts/module-bank/controllers/discount-new.js"></script>
 	<script src="scripts/module-bank/controllers/discount.js"></script>
 	<script src="scripts/module-bank/controllers/discounts.js"></script>
+	<script src="scripts/module-bank/directives/mb-pay.js"></script>
 	<script src="scripts/module-bank/editors/bank-gate.js"></script>
 	<script src="scripts/module-bank/views/gates-new.js"></script>
 	<script src="scripts/module-bank/views/gates.js"></script>
@@ -168,8 +170,8 @@
 	<script src="scripts/module-sdp/sdp-downloaded-link-directive.js"></script>
 	<script src="scripts/module-seen/controllers/seen-abstract-binaryItem-ctrl.js"></script>
 	<script src="scripts/module-seen/controllers/seen-abstract-collection-ctrl.js"></script>
+	<script src="scripts/module-seen/controllers/seen-abstract-ctrl.js"></script>
 	<script src="scripts/module-seen/controllers/seen-abstract-item-ctrl.js"></script>
-	<script src="scripts/module-seen/controllers/seen-general-abstract-collection-ctrl.js"></script>
 	<script src="scripts/module-seen/directives/mb-pagination-bar.js"></script>
 	<script src="scripts/module-seo/actions/contents-render.js"></script>
 	<script src="scripts/module-seo/controllers/backend-new.js"></script>
@@ -257,6 +259,8 @@
 	<script src="scripts/module-tenant/views/tickets.js"></script>
 	<script src="scripts/module-user/actions/account-create.js"></script>
 	<script src="scripts/module-user/actions/account-delete.js"></script>
+	<script src="scripts/module-user/actions/account-edit.js"></script>
+	<script src="scripts/module-user/actions/account-update.js"></script>
 	<script src="scripts/module-user/actions/group-create.js"></script>
 	<script src="scripts/module-user/actions/group-delete.js"></script>
 	<script src="scripts/module-user/controllers/seen-user-account.js"></script>
@@ -275,6 +279,7 @@
 	<script src="scripts/module-user/views/groups.js"></script>
 	<script src="scripts/module-user/views/roles.js"></script>
 	<script src="scripts/module-user/wizards/account-create/accountPage.js"></script>
+	<script src="scripts/module-user/wizards/account-create/avatarPage.js"></script>
 	<script src="scripts/module-user/wizards/account-create/credentialPage.js"></script>
 	<script src="scripts/module-user/wizards/account-create/groupsPage.js"></script>
 	<script src="scripts/module-user/wizards/account-create/profilePage.js"></script>
