fixed: injection and based controller is updated.

--- a/app/scripts/module-cms/resources/microdatum.html
+++ b/app/scripts/module-cms/resources/microdatum.html
@@ -1,5 +1,6 @@
 <div 
-	layout="column" style="padding: 16px;" flex>
+	layout="column" 
+	style="padding: 16px;" flex>
 	<md-input-container>
 		<label mb-translate="">Key</label>
 		<input 
