--- a/app/index.html
+++ b/app/index.html
@@ -142,8 +142,12 @@
 	<script src="scripts/module-cms/editors/content-viewer.js"></script>
 	<script src="scripts/module-cms/editors/term-editor-ctrl.js"></script>
 	<script src="scripts/module-cms/editors/term-taxonomy-editor-ctrl.js"></script>
+	<script src="scripts/module-cms/resources/category.js"></script>
 	<script src="scripts/module-cms/resources/content-upload.js"></script>
 	<script src="scripts/module-cms/resources/image-url.js"></script>
+	<script src="scripts/module-cms/resources/microdatum.js"></script>
+	<script src="scripts/module-cms/resources/tag.js"></script>
+	<script src="scripts/module-cms/resources/term-taxonomy.js"></script>
 	<script src="scripts/module-cms/services/editors.js"></script>
 	<script src="scripts/module-cms/views/content-new.js"></script>
 	<script src="scripts/module-cms/views/contents.js"></script>
