current account profile editor

--- a/app/index.html
+++ b/app/index.html
@@ -83,6 +83,7 @@
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
 	<!-- injector:js -->
 	<script src="scripts/app.js"></script>
+	<script src="scripts/module-account/index.js"></script>
 	<script src="scripts/module-backup/index.js"></script>
 	<script src="scripts/module-bank/index.js"></script>
 	<script src="scripts/module-cms/index.js"></script>
@@ -94,12 +95,16 @@
 	<script src="scripts/module-spa/index.js"></script>
 	<script src="scripts/module-tenant/index.js"></script>
 	<script src="scripts/module-user/index.js"></script>
+	<script src="scripts/module-account/actions/change-password.js"></script>
 	<script src="scripts/module-account/actions/crisp-chat.js"></script>
+	<script src="scripts/module-account/actions/logout.js"></script>
+	<script src="scripts/module-account/actions/profile-update.js"></script>
 	<script src="scripts/module-account/components/account-toolbar.js"></script>
 	<script src="scripts/module-account/controllers/account-container.js"></script>
 	<script src="scripts/module-account/controllers/account-profile-editor-ctrl.js"></script>
 	<script src="scripts/module-account/directives/mb-user-menu.js"></script>
 	<script src="scripts/module-account/factories/seen-authentication-provider.js"></script>
+	<script src="scripts/module-account/views/profile.js"></script>
 	<script src="scripts/module-backup/snapshots-view-ctrl.js"></script>
 	<script src="scripts/module-bank/actions/gates-create.js"></script>
 	<script src="scripts/module-bank/actions/gates-delete.js"></script>
