adding user message component to show alert

--- a/app/index.html
+++ b/app/index.html
@@ -29,6 +29,7 @@
     <!-- build:css(.tmp) styles/main.css -->
 	<!-- injector:css -->
 	<link rel="stylesheet" href="scripts/module-account/components/account-toolbar.css">
+	<link rel="stylesheet" href="scripts/module-account/components/messages.css">
 	<link rel="stylesheet" href="scripts/module-bank/editors/bank-gate.css">
 	<link rel="stylesheet" href="scripts/module-cms/editors/content-properties.css">
 	<link rel="stylesheet" href="scripts/module-seo/views/links-new.css">
@@ -100,6 +101,7 @@
 	<script src="scripts/module-account/actions/messages.js"></script>
 	<script src="scripts/module-account/actions/profile-update.js"></script>
 	<script src="scripts/module-account/components/account-toolbar.js"></script>
+	<script src="scripts/module-account/components/messages.js"></script>
 	<script src="scripts/module-account/controllers/account-container.js"></script>
 	<script src="scripts/module-account/directives/mb-user-menu.js"></script>
 	<script src="scripts/module-account/factories/seen-authentication-provider.js"></script>
