--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
 	<link rel="stylesheet" href="scripts/module-account/components/messages.css">
 	<link rel="stylesheet" href="scripts/module-bank/editors/bank-gate.css">
 	<link rel="stylesheet" href="scripts/module-cms/editors/content-properties.css">
+	<link rel="stylesheet" href="scripts/module-seen/controllers/abstract-collection-view.css">
 	<link rel="stylesheet" href="scripts/module-seo/views/links-new.css">
 	<link rel="stylesheet" href="styles/amd-chips-hack.css">
 	<link rel="stylesheet" href="styles/crisp-hack-button.css">
@@ -89,6 +90,7 @@
 	<script src="scripts/module-cms/index.js"></script>
 	<script src="scripts/module-jms/index.js"></script>
 	<script src="scripts/module-sdp/index.js"></script>
+	<script src="scripts/module-seen/index.js"></script>
 	<script src="scripts/module-seo/index.js"></script>
 	<script src="scripts/module-shop-x/index.js"></script>
 	<script src="scripts/module-shop/index.js"></script>
@@ -138,7 +140,7 @@
 	<script src="scripts/module-cms/actions/contents-upload.js"></script>
 	<script src="scripts/module-cms/controllers/content-new-ctrl.js"></script>
 	<script src="scripts/module-cms/controllers/content-url-ctrl.js"></script>
-	<script src="scripts/module-cms/controllers/seen-cms-contents-ctrl.js"></script>
+	<script src="scripts/module-cms/controllers/contents-ctrl.js"></script>
 	<script src="scripts/module-cms/controllers/seen-cms-termTaxonomies-ctrl.js"></script>
 	<script src="scripts/module-cms/dialogs/term-taxonomy-new-dialog-ctrl.js"></script>
 	<script src="scripts/module-cms/directives/content-icon-directive.js"></script>
@@ -179,11 +181,16 @@
 	<script src="scripts/module-sdp/controllers/sdp-tag.js"></script>
 	<script src="scripts/module-sdp/controllers/sdp-tags.js"></script>
 	<script src="scripts/module-sdp/sdp-downloaded-link-directive.js"></script>
-	<script src="scripts/module-seen/controllers/seen-abstract-binaryItem-ctrl.js"></script>
-	<script src="scripts/module-seen/controllers/seen-abstract-collection-ctrl.js"></script>
-	<script src="scripts/module-seen/controllers/seen-abstract-ctrl.js"></script>
-	<script src="scripts/module-seen/controllers/seen-abstract-item-ctrl.js"></script>
+	<script src="scripts/module-seen/actions/query-parameter-filters-update.js"></script>
+	<script src="scripts/module-seen/actions/query-parameter-sorts-update.js"></script>
+	<script src="scripts/module-seen/controllers/abstract-binaryItem-ctrl.js"></script>
+	<script src="scripts/module-seen/controllers/abstract-collection-view.js"></script>
+	<script src="scripts/module-seen/controllers/abstract-collection.js"></script>
+	<script src="scripts/module-seen/controllers/abstract-ctrl.js"></script>
+	<script src="scripts/module-seen/controllers/abstract-item-ctrl.js"></script>
 	<script src="scripts/module-seen/directives/mb-pagination-bar.js"></script>
+	<script src="scripts/module-seen/resources/query-parameter-filters.js"></script>
+	<script src="scripts/module-seen/resources/query-parameter-sorts.js"></script>
 	<script src="scripts/module-seo/actions/contents-render.js"></script>
 	<script src="scripts/module-seo/controllers/backend-new.js"></script>
 	<script src="scripts/module-seo/controllers/backend.js"></script>
