In module CMS: all tollbars are removed from views and the standard view toolbar is used.

--- a/app/scripts/module-cms/editors/term-taxonomy.html
+++ b/app/scripts/module-cms/editors/term-taxonomy.html
@@ -1,6 +1,6 @@
 <md-content
-	ng-controller="AmdCmsTermTaxonomyCtrl as ctrl"
 	layout-padding
+	style="max-width: 100%; overflow: auto;"
 	flex>
 	<mb-titled-block 
 		mb-progress="ctrl.isBusy()"
