--- a/app/index.html
+++ b/app/index.html
@@ -151,6 +151,8 @@
 	<script src="scripts/module-cms/editors/content-viewer.js"></script>
 	<script src="scripts/module-cms/editors/term-taxonomy.js"></script>
 	<script src="scripts/module-cms/editors/term.js"></script>
+	<script src="scripts/module-cms/editors/vw-studio-external.js"></script>
+	<script src="scripts/module-cms/editors/vw-studio.js"></script>
 	<script src="scripts/module-cms/resources/category.js"></script>
 	<script src="scripts/module-cms/resources/content-metadata.js"></script>
 	<script src="scripts/module-cms/resources/content-upload.js"></script>
