--- a/app/index.html
+++ b/app/index.html
@@ -32,6 +32,7 @@
 	<link rel="stylesheet" href="scripts/module-account/components/messages.css">
 	<link rel="stylesheet" href="scripts/module-bank/editors/bank-gate.css">
 	<link rel="stylesheet" href="scripts/module-cms/editors/content-properties.css">
+	<link rel="stylesheet" href="scripts/module-cms/views/images.css">
 	<link rel="stylesheet" href="scripts/module-seen/controllers/abstract-collection-view.css">
 	<link rel="stylesheet" href="scripts/module-seo/views/links-new.css">
 	<link rel="stylesheet" href="styles/amd-chips-hack.css">
@@ -162,6 +163,7 @@
 	<script src="scripts/module-cms/services/editors.js"></script>
 	<script src="scripts/module-cms/views/content-new.js"></script>
 	<script src="scripts/module-cms/views/contents.js"></script>
+	<script src="scripts/module-cms/views/images.js"></script>
 	<script src="scripts/module-cms/views/term-taxonomies.js"></script>
 	<script src="scripts/module-cms/views/terms.js"></script>
 	<script src="scripts/module-cms/wizards/new-page/propertiesPage.js"></script>
