convert some basic action into term-taxonomies action

--- a/app/index.html
+++ b/app/index.html
@@ -140,6 +140,7 @@
 	<script src="scripts/module-cms/actions/contents-update.js"></script>
 	<script src="scripts/module-cms/actions/contents-upload.js"></script>
 	<script src="scripts/module-cms/actions/term-taxonomies-create.js"></script>
+	<script src="scripts/module-cms/actions/term-taxonomies-delete.js"></script>
 	<script src="scripts/module-cms/actions/terms-create.js"></script>
 	<script src="scripts/module-cms/actions/terms-delete.js"></script>
 	<script src="scripts/module-cms/controllers/content-new-ctrl.js"></script>
