update role list to add application name
https://trello.com/c/lA3Vb6yx

--- a/app/scripts/module-spa/editors/spa.html
+++ b/app/scripts/module-spa/editors/spa.html
@@ -21,7 +21,7 @@
 						<td>
 							<mb-inline
 								ng-model="ctrl.model.name"
-								ng-change="ctrl.update()"
+								ng-change="ctrl.updateModel($event)"
 								mb-inline-type="text"
 								mb-inline-label="Name"
 								mb-inline-enable="true">{{ctrl.model.name}}</mb-inline>
