Adding resource to select accountId

--- a/app/index.html
+++ b/app/index.html
@@ -316,6 +316,7 @@
 	<script src="scripts/module-user/editors/account.js"></script>
 	<script src="scripts/module-user/editors/group.js"></script>
 	<script src="scripts/module-user/editors/role.js"></script>
+	<script src="scripts/module-user/resources/accountId.js"></script>
 	<script src="scripts/module-user/resources/accounts.js"></script>
 	<script src="scripts/module-user/resources/groups.js"></script>
 	<script src="scripts/module-user/resources/roles.js"></script>
