support agecy id

--- a/app/index.html
+++ b/app/index.html
@@ -258,6 +258,7 @@
 	<script src="scripts/module-shop/actions/zone-create.js"></script>
 	<script src="scripts/module-shop/actions/zone-delete.js"></script>
 	<script src="scripts/module-shop/actions/zone-update.js"></script>
+	<script src="scripts/module-shop/controllers/agencies.js"></script>
 	<script src="scripts/module-shop/controllers/categories.js"></script>
 	<script src="scripts/module-shop/controllers/order.js"></script>
 	<script src="scripts/module-shop/controllers/zones.js"></script>
@@ -269,6 +270,7 @@
 	<script src="scripts/module-shop/editors/service.js"></script>
 	<script src="scripts/module-shop/editors/tag.js"></script>
 	<script src="scripts/module-shop/editors/zone.js"></script>
+	<script src="scripts/module-shop/resources/agency-id.js"></script>
 	<script src="scripts/module-shop/resources/categories.js"></script>
 	<script src="scripts/module-shop/resources/zone-id.js"></script>
 	<script src="scripts/module-shop/views/agencies.js"></script>
