The assets view and editor is enabled.

--- a/app/index.html
+++ b/app/index.html
@@ -190,6 +190,7 @@
 	<script src="scripts/module-cms/wizards/new-term/wizard.js"></script>
 	<script src="scripts/module-jms/pipeline-editor-ctrl.js"></script>
 	<script src="scripts/module-jms/pipelines-view-ctrl.js"></script>
+	<script src="scripts/module-sdp/actions/assets-edit.js"></script>
 	<script src="scripts/module-sdp/controllers/resource-categories-list.js"></script>
 	<script src="scripts/module-sdp/controllers/resource-category-list.js"></script>
 	<script src="scripts/module-sdp/controllers/resource-tag-list.js"></script>
