--- a/app/scripts/module-sdp/editors/asset.html
+++ b/app/scripts/module-sdp/editors/asset.html
@@ -3,51 +3,18 @@
 	flex>
 	
 	<mb-titled-block 
-		mb-progress="ctrl.loadingAsset || ctrl.savingAsset"
 		mb-title="{{'Asset' | translate}}"
 		layout="column">
 		<section ng-show="!ctrl.edit"
 			layout="column">
 			<table>
 				<tr>
-					<td>ID </td>
-					<td>: {{asset.id}}</td>
+					<td mb-translate>ID</td>
+					<td>: {{::ctrl.model.id}}</td>
 				</tr>
 				<tr>
-					<td>Name </td>
-					<td>: {{asset.name}}</td>
-				</tr>
-				<tr>
-					<td>Type </td>
-					<td>: {{asset.type}}</td>
-				</tr>
-				<tr ng-if="asset.type === 'file'">
-					<td>Price  </td>
-					<td>: {{asset.price}}</td>
-				</tr>
-				<tr>
-					<td>Description </td>
-					<td>: {{asset.description}}</td>
-				</tr>
-				<tr>
-					<td>Creation Date </td>
-					<td>: {{asset.creation_dtime}}</td>
-				</tr>
-				<tr>
-					<td>Last Modif Date </td>
-					<td>: {{asset.modif_dtime}}</td>
-				</tr>
-				<tr>
-					<td>Parent </td>
-					<td>: {{asset.parent}}</td>
-				</tr>
-				<tr>
-					<td>Content ID </td>
-					<td>: {{asset.content}}</td>
-				</tr>
-				<tr>
-					<td>Thumbnail ID </td>
-					<td>: {{asset.thumbnail}}</td>
+					<td mb-translate>Title</td>
+					<td>: {{ctrl.model.title}}</td>
 				</tr>
 			</table>
 			<!-- Action bar -->
@@ -120,7 +87,6 @@
 
 	<!-- categories -->
 	<mb-titled-block
-		mb-progress="ctrl.loadingCategories"
 		layout="column" 
 		mb-title="{{'Categories'  | translate}}">
 		<div class="sdp-chips-list" style="direction:rtl;">
@@ -154,7 +120,6 @@
 	
 	<!-- tags -->
 	<mb-titled-block
-		mb-progress="ctrl.loadingTags"
 		mb-title="{{'Tags'  | translate}}"
 		layout="column">
 		<div class="sdp-chips-list" style="direction:rtl;">
@@ -185,41 +150,9 @@
 		</div>
 	</mb-titled-block>
 	
-	<!-- related assets -->
-	<mb-titled-block 
-		mb-progress="ctrl.loadingRelateds"
-		mb-title="{{'Relateds'  | translate}}"
-		layout="column">
-		<div class="sdp-chips-list" style="direction:rtl;">
-			<div layout="row" layout-align="start center">
-				<md-chips flex
-					class="custom-chips" 
-					ng-model="ctrl.relateds" 
-					md-on-select="goToAssetPage($chip.id)"
-					md-removable="true" 
-					style="direction:rtl;">
-					<md-chip-template>
-						<span>
-							<strong>{{$chip.id}} - {{$chip.name}}</strong>
-						</span>
-					</md-chip-template>
-				  	<button md-chip-remove 
-				  		class="md-primary chipaction" 
-				  		ng-click="removeRelation($chip)">
-						<mb-icon class="block">close</mb-icon>
-				  	</button>
-				</md-chips>
-				<md-button 
-					class="md-icon-button md-raised"
-					ng-click="addRelation()">
-					<mb-icon>add</mb-icon>
-				</md-button>
-			</div>
-			<div ng-show="!ctrl.relateds || ctrl.relateds.length == 0"
-				layout="column" layout-align="center center">
-				<p>No one asset is related to this asset.</p>
-			</div>
-		</div>
-	</mb-titled-block>
 </md-content>
+
+
+
+
 
