Adding ability to delete metadata

--- a/app/index.html
+++ b/app/index.html
@@ -147,6 +147,7 @@
 	<script src="scripts/module-bank/views/gates.js"></script>
 	<script src="scripts/module-cms/actions/contents-delete.js"></script>
 	<script src="scripts/module-cms/actions/contents-edit.js"></script>
+	<script src="scripts/module-cms/actions/contents-metadata-delete.js"></script>
 	<script src="scripts/module-cms/actions/contents-newPage.js"></script>
 	<script src="scripts/module-cms/actions/contents-properties.js"></script>
 	<script src="scripts/module-cms/actions/contents-update.js"></script>
