--- a/app/index.html
+++ b/app/index.html
@@ -294,6 +294,7 @@
 	<script src="scripts/module-spa/views/spa-upload.js"></script>
 	<script src="scripts/module-spa/views/spas.js"></script>
 	<script src="scripts/module-tenant/actions/tenants-create.js"></script>
+	<script src="scripts/module-tenant/actions/tenants-edit.js"></script>
 	<script src="scripts/module-tenant/directives/amd-tenant-invoice.js"></script>
 	<script src="scripts/module-tenant/editors/invoice.js"></script>
 	<script src="scripts/module-tenant/editors/receipt.js"></script>
