--- a/app/scripts/module-tenant/editors/tenant.html
+++ b/app/scripts/module-tenant/editors/tenant.html
@@ -1,5 +1,4 @@
-<md-content
-	style="overflow: auto;">
+<md-content>
 	<mb-titled-block 
 		mb-progress="ctrl.loading || ctrl.removing"
 		mb-title="{{'Tenant' | translate}}"
@@ -42,6 +41,14 @@
 						mb-inline-enable="{{true}}"
 						mb-inline-on-save="ctrl.update()"
 						ng-model="ctrl.tenant.domain">: {{ctrl.tenant.domain}}</mb-inline></td>
+				</tr>
+				<tr>
+					<td mb-translate="">Parent</td>
+					<td><mb-inline
+						mb-inline-type="tenant_id"
+						mb-inline-enable="{{true}}"
+						mb-inline-on-save="ctrl.update()"
+						ng-model="ctrl.tenant.parent_id">: {{ctrl.tenant.parent_id}}</mb-inline></td>
 				</tr>
 				<tr>
 					<td mb-translate="">Validate</td>
