To replace md-color with mb-color

--- a/app/scripts/directives/mb-pagination-bar.html
+++ b/app/scripts/directives/mb-pagination-bar.html
@@ -2,7 +2,7 @@
 	<div class="wrapper-stack-toolbar-container" style="border-radius: 0px">
 		<!-- Action bar -->
 		<div
-			md-colors="{background: 'primary-hue-1'}">
+			mb-colors="{background: 'primary-hue-1'}">
 			<div
 				class="md-toolbar-tools">
 				<md-button
@@ -75,7 +75,7 @@
 		<!-- Search -->
 		<div
 			class="stack-toolbar new-box-showing-animation"
-			md-colors="{background: 'primary-hue-2'}"
+			mb-colors="{background: 'primary-hue-2'}"
 			ng-show="showSearch">
 			<div class="md-toolbar-tools">
 				<md-button
@@ -102,7 +102,7 @@
 		<!-- Sort -->
 		<div
 			class="stack-toolbar new-box-showing-animation"
-			md-colors="{background: 'primary-hue-2'}"
+			mb-colors="{background: 'primary-hue-2'}"
 			ng-show="showSort">
 			<div class="md-toolbar-tools">
 				<md-button
@@ -168,7 +168,7 @@
 		<!-- Filter -->
 		<div
 			class="stack-toolbar new-box-showing-animation"
-			md-colors="{background: 'primary-hue-2'}"
+			mb-colors="{background: 'primary-hue-2'}"
 			ng-show="showFilter">
 			<div
 				layout="row"
@@ -203,7 +203,7 @@
 	<!--menu and input field for every new filter-->
 	<div
 		layout="column"
-		md-colors="{background: 'primary-hue-1'}"
+		mb-colors="{background: 'primary-hue-1'}"
 		ng-show="showFilter && filters.length>0"
 		layout-padding>
 		<!-- Menu including filter keys -->
