--- a/app/scripts/module-account/directives/mb-user-menu.html
+++ b/app/scripts/module-account/directives/mb-user-menu.html
@@ -1,5 +1,5 @@
 <div
-    md-colors="{'background-color': 'primary-hue-1'}"
+    mb-colors="{'background-color': 'primary-hue-1'}"
     class="amd-user-menu">
     <md-menu
         md-offset="0 20">
