--- a/app/scripts/module-account/wizards/change-password/mb-password.html
+++ b/app/scripts/module-account/wizards/change-password/mb-password.html
@@ -17,7 +17,7 @@
 				<div style="text-align: center;"
 					layout-margin
 					ng-show="!ctrl.changingPassword && changePassMessage">
-					<p><span md-colors="{color:'warn'}" mb-translate>{{changePassMessage}}</span></p>
+					<p><span mb-colors="{color:'warn'}" mb-translate>{{changePassMessage}}</span></p>
 				</div>
 				<md-input-container layout-fill>
 					<label mb-translate>current password</label>
