--- a/app/scripts/module-bank/directives/mb-pay.html
+++ b/app/scripts/module-bank/directives/mb-pay.html
@@ -22,7 +22,7 @@
             ng-if="ctrl.loadingGates || ctrl.paying"
             md-mode="indeterminate"
             class="md-accent"
-            md-color>
+            mb-color>
         </md-progress-linear>
 
         <div 
