--- a/app/scripts/module-shop/editors/service.html
+++ b/app/scripts/module-shop/editors/service.html
@@ -74,7 +74,7 @@
 		layout="column">
 		<table class="mb-table mb-shop-table">
 			<thead>
-				<tr md-colors="{color: 'primary-700'}">
+				<tr mb-colors="{color: 'primary-700'}">
 					<td style="width: 20%" mb-translate="">Field key</td>
 					<td style="width: 20%" mb-translate="">Field value</td>
 					<td style="width: 20%" mb-translate="">Unit</td>
