--- a/app/scripts/module-tenant/editors/ticket.html
+++ b/app/scripts/module-tenant/editors/ticket.html
@@ -128,7 +128,7 @@
                 <md-whiteframe 
                     style="margin-bottom: 16px;padding: 10px"
                     class="md-whiteframe-13dp" 
-                    md-colors="{backgroundColor: 'primary'}"
+                    mb-colors="{backgroundColor: 'primary'}"
                     layout ="column"
                     layout-align="start start">
                     <h4 ng-if="comment.title">{{comment.title}}</h4>
