--- a/app/scripts/module-user/wizards/account-create/avatarPage.html
+++ b/app/scripts/module-user/wizards/account-create/avatarPage.html
@@ -1,8 +1,7 @@
-<lf-ng-md-file-input 
-	lf-files="files" 
-	progress 
-	lf-drag-and-drop-label="Drag and Drop"
-	drag
-	preview 
-	accept="image/*">
-</lf-ng-md-file-input>
+<mb-file-input 
+	ng-model="files" 
+	mb-progress 
+	mb-drag
+	mb-preview 
+	mb-accept="image/*">
+</mb-file-input>
