An action is added to show details of an asset.

--- a/app/index.html
+++ b/app/index.html
@@ -188,6 +188,8 @@
 	<script src="scripts/module-cms/wizards/new-term/wizard.js"></script>
 	<script src="scripts/module-jms/pipeline-editor-ctrl.js"></script>
 	<script src="scripts/module-jms/pipelines-view-ctrl.js"></script>
+	<script src="scripts/module-sdp/actions/assets-delete.js"></script>
+	<script src="scripts/module-sdp/actions/assets-details.js"></script>
 	<script src="scripts/module-sdp/actions/assets-edit.js"></script>
 	<script src="scripts/module-sdp/actions/category-edit.js"></script>
 	<script src="scripts/module-sdp/actions/category-new.js"></script>
